<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical">

      <!--  <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />-->

        <!-- Using android:layout_marginTop here to compensate for CardView's margin. -->
        <!-- Using dp as unit for android:textSize because this TextView functions as imagery. -->
        <ImageView
            android:layout_width="120dip"
            android:layout_height="120dip"
            android:layout_marginTop="@dimen/screen_edge_horizontal_margin"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="云计错"
            android:textColor="@android:color/white"
            android:textSize="72dp"
            android:src="@mipmap/logo"
            tools:ignore="SpUsage" />

       <!-- <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />-->

        <!-- Using app:cardMaxElevation as margin. -->
        <com.dvp.base.fenwu.yunjicuo.ui.FriendlyCardView
            android:layout_width="@dimen/card_view_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_edge_horizontal_margin_negative_half"
            android:layout_marginBottom="@dimen/screen_edge_horizontal_margin_negative_half"
            app:cardMaxElevation="@dimen/screen_edge_horizontal_margin">

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                    android:id="@+id/username_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_content_horizontal_margin_with_4dp_padding"
                    android:layout_marginRight="@dimen/card_content_horizontal_margin_with_4dp_padding"
                    android:layout_marginTop="@dimen/card_content_vertical_margin_large"
                    app:errorEnabled="true">

                    <me.zhanghai.android.materialedittext.MaterialEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/auth_username"
                        android:textSize="@dimen/ts_title"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:maxLines="1" />
                </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

                <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_content_horizontal_margin_with_4dp_padding"
                    android:layout_marginRight="@dimen/card_content_horizontal_margin_with_4dp_padding"
                    app:errorEnabled="true">

                    <me.zhanghai.android.materialedittext.MaterialEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/auth_password"
                        android:textSize="@dimen/ts_title"
                        android:imeActionId="@+id/ime_login"
                        android:imeActionLabel="@string/auth_log_in"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:maxLines="1" />
                </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="60dip"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/card_content_horizontal_margin_with_4dp_padding"
                    android:layout_marginRight="@dimen/card_content_horizontal_margin_with_4dp_padding"
                    android:text="@string/auth_log_in"
                    style="@style/Widget.AppCompat.Button.Colored" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginLeft="@dimen/card_action_margin_with_4dp_padding"
                    android:layout_marginRight="@dimen/card_action_margin_with_4dp_padding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/forget_psw_btn"
                        android:layout_weight="1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/card_action_margin_with_4dp_padding"
                        android:layout_marginRight="@dimen/card_action_margin_with_4dp_padding"
                        android:layout_marginTop="@dimen/card_action_margin"
                        android:layout_marginBottom="@dimen/card_action_margin"
                        android:gravity="center_vertical"
                        android:layout_gravity="left"
                        android:visibility="invisible"
                        android:text="忘记密码"
                        android:textColor="?android:textColorHint"
                        style="?borderlessButtonStyle" />


                    <Button
                        android:id="@+id/register"
                        android:layout_weight="1"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/card_action_margin_with_4dp_padding"
                        android:layout_marginRight="@dimen/card_action_margin_with_4dp_padding"
                        android:layout_marginTop="@dimen/card_action_margin"
                        android:layout_marginBottom="@dimen/card_action_margin"
                        android:layout_gravity="right"
                        android:text="@string/auth_register"
                        android:textColor="?android:textColorHint"
                        style="?borderlessButtonStyle" />

                </LinearLayout>

            </LinearLayout>

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="invisible"
                style="@style/Widget.MaterialProgressBar.ProgressBar" />
        </com.dvp.base.fenwu.yunjicuo.ui.FriendlyCardView>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="@dimen/weight_1_when_tablet" />
    </LinearLayout>
</ScrollView>
